--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -6,6 +6,14 @@
     width: 193px;
 }
 
+.fs-sm {
+  font-size: 10px
+}
+
+.fs-md {
+  font-size: 14px;
+}
+
 
 .fixed-header {
     position: fixed;
@@ -33,4 +41,23 @@
     font-size: 1.5rem;
     color: #333;
   }
+
+  .product-picker{
+    width: 50%;
+    padding: "20px";
+    list-style-type: none;
+  }
   
+  .clickable {
+    cursor: pointer;
+  }
+
+  .custom-table tr td{
+    border-bottom: 1px solid #0000001A;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .border-bottom-custom {
+    border-bottom: 1px solid #0000001A;
+  }
